fix de errores - mayuscula en un recurso

--- a/css/style.css
+++ b/css/style.css
@@ -194,7 +194,7 @@ body {
   height: 30px !important;
 }
 .carousel-control-next-icon {
-  background-image: url('../img/right-Arrow-Red.png') !important;
+  background-image: url('../img/Right-Arrow-Red.png') !important;
   background-size: contain;
   width: 20px !important;
   height: 30px !important;
