Cambios de los contenidos y correcciones de resolucion

--- a/css/style-slider.css
+++ b/css/style-slider.css
@@ -127,7 +127,7 @@
     height: 80%;    
   }
   .i3 {
-    content:url('../img/slide3-mobil.png');
+    content:url('../img/slide4-mobil.jpg');
     height: 80%;   
   } 
   .container-titulo {
