--- a/productos/style.css
+++ b/productos/style.css
@@ -2,10 +2,12 @@
 html {
   background-color: #f8f8f8;
   box-sizing: border-box;
-  }
-  *, *:before, *:after {
+}
+*,
+*:before,
+*:after {
   box-sizing: inherit;
-  }
+}
 
 .max-w {
   max-width: 1240px !important;
@@ -13,20 +15,20 @@ html {
   margin-right: auto !important;
 }
 .nu-16 {
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: "Nunito Sans", sans-serif;
   font-size: min(1.4vw, 14px);
 }
 .nu-20 {
-  font-family: 'Nunito Sans';
+  font-family: "Nunito Sans";
   font-size: min(2.5vw, 20px);
 }
 .nu-26 {
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: "Nunito Sans", sans-serif;
   font-weight: 500;
   font-size: min(2.5vw, 20px);
 }
 .nu-44 {
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: "Nunito Sans", sans-serif;
   font-weight: 600;
   font-size: min(2.4vw, 40px);
 }
@@ -77,7 +79,7 @@ html {
   cursor: pointer;
 }
 .img-min {
-  box-sizing:border-box;  
+  box-sizing: border-box;
   -webkit-box-sizing: border-box;
   padding-bottom: 30px;
 }
@@ -95,6 +97,29 @@ html {
 .b {
   border-bottom: 3px solid #f8f8f8;
 }
+
+.tbl-producto {
+  background-color: #fff;
+  border: 1px solid #707070;
+  border-radius: 6px;
+  padding: 1em;
+}
+.tbl-item {
+  list-style: none;
+}
+.tbl-producto ul {
+  padding: 0 !important;
+  margin: 0 !important;
+}
+.tbl-item p{
+ font-weight: 700;
+ color: #000000;
+ margin: 15px  !important;
+}
+.tbl-item p span{
+  font-weight: 500;
+  color: #000000;
+ }
 
 /*PAGINA DE PRODUCTO*/
 .catalogo-info {
@@ -115,14 +140,14 @@ html {
 }
 #producto h3 {
   margin-top: 10px;
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: "Nunito Sans", sans-serif;
   font-weight: 700;
   font-size: min(7vw, 26px);
 }
 #producto h5 {
   margin-top: 10px;
   margin-bottom: 10px;
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: "Nunito Sans", sans-serif;
   font-weight: 700;
   font-size: min(4vw, 20px);
   color: #605f5f;
@@ -130,13 +155,12 @@ html {
 #producto p {
   margin-top: 10px;
   margin-bottom: 20px;
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: "Nunito Sans", sans-serif;
   font-size: min(4vw, 16px);
   color: #605f5f;
 }
 
 @media (max-width: 426px) {
-  
   .botones {
     margin-top: 10px;
     margin-bottom: 10px;
@@ -193,21 +217,21 @@ html {
   }
 
   .nu-16 {
-    font-family: 'Nunito Sans', sans-serif;
+    font-family: "Nunito Sans", sans-serif;
     font-size: min(1.4vw, 14px);
   }
   .nu-20 {
-    font-family: 'Nunito Sans', sans-serif;
+    font-family: "Nunito Sans", sans-serif;
     font-weight: 700;
     font-size: min(4vw, 12px);
   }
   .nu-26 {
-    font-family: 'Nunito Sans', sans-serif;
+    font-family: "Nunito Sans", sans-serif;
     font-weight: 500;
     font-size: min(4.1vw, 100px);
   }
   .nu-44 {
-    font-family: 'Nunito Sans', sans-serif;
+    font-family: "Nunito Sans", sans-serif;
     font-weight: 600;
     font-size: min(2.4vw, 40px);
   }
