--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,14 @@ body {
   width: 20%;
 }
 .navbar-brand img {
-  width: 60%;
+  width: 40%;
+}
+
+@media (max-width: 426px){
+  .navbar-brand img {
+    width: 90%;
+  }
+
 }
 .navbar-collapse{
  width: 80%;
@@ -141,7 +148,7 @@ body {
 }
 @media (max-width: 321px){
   .frame {
-    height: 1100px;
+    height: 1150px;
   }
 
 }
@@ -243,6 +250,9 @@ body {
   width: 20px !important;
   height: 30px !important;
 }
+.card {
+  border-radius: 8px !important;
+}
 .card-text small {
   cursor: pointer;
 }
@@ -271,14 +281,16 @@ body {
 .modal-title {
   font-family: 'Nunito Sans', sans-serif;
   
-  font-size: min(2.4vw, 40px);
+  font-size: min(2.4vw, 26px);
 }
 @media (max-width: 426px) {
 .modal-title {    
     font-size: min(7.5vw, 50px);  
 }
 
-
+.sec-4-1 {
+  width:100% !important;
+}
 }
 
 
@@ -427,7 +439,9 @@ iframe {
     padding-right: 0 !important;
   }
   .navbar-toggler {
-    margin-right: 5%;
+    margin-right: 0;
+    margin-left: auto;
+
   }
   .navbar-collapse {
     margin-top: 4.5%;
