--- a/productos/style.css
+++ b/productos/style.css
@@ -52,10 +52,11 @@ html, body {
   opacity: 1;
   border: none;
 }
+
 .categoria-producto:focus {
   outline: none;
-  background: #ff4438;
-  color: #f5f5f5;
+  /*background: #ff4438;
+  color: #f5f5f5;*/
 }
 .op-1 {
   opacity: 1;
@@ -71,6 +72,7 @@ html, body {
   width: 60%;
 }
 .img-miniatura {
+  width: 100%;
   border: 1px solid #0000001f;
   background-color: #fff;
   padding: 7%;
@@ -78,21 +80,26 @@ html, body {
   box-shadow: 0px 3px 5px #0000001f;
   cursor: pointer;
 }
+.img-miniatura h5 {
+  color: #888888;
+}
 .img-min {
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
-  padding-bottom: 30px;
+  padding-bottom: 5px;
 }
-.img-min:hover {
+/*
+.img-miniatura:hover {
   transition: border-bottom ease 2s;
   border-bottom: 3px solid #ff4438;
-}
+}*/
 .img-min:focus {
   border-bottom: 3px solid #ff4438;
 }
+
 .img-miniatura:focus {
   outline: none;
-  border: 2px solid #ff4438;
+  /*border: 4px solid #ff4438;*/
 }
 .b {
   border-bottom: 3px solid #f8f8f8;
@@ -174,6 +181,12 @@ html, body {
 
 }
 @media (max-width: 426px) {
+  #modal-dialog {
+    max-width: 95%;
+    margin-top: 150%;
+    margin-: 150% auto;
+  }
+
   .botones {
     margin-top: 10px;
     margin-bottom: 10px;
@@ -231,7 +244,7 @@ html, body {
 
   .nu-16 {
     font-family: "Nunito Sans", sans-serif;
-    font-size: min(1.4vw, 14px);
+    font-size: min(4vw, 14px);
   }
   .nu-20 {
     font-family: "Nunito Sans", sans-serif;
@@ -248,4 +261,14 @@ html, body {
     font-weight: 600;
     font-size: min(2.4vw, 40px);
   }
+}
+
+.cursor-button {
+  background-color: #ff4438;
+  color: #fff;
+}
+
+.cursor-img {
+  outline: none;
+    border: 4px solid #ff4438;
 }
