--- a/productos/style.css
+++ b/productos/style.css
@@ -1,5 +1,6 @@
 /*HERRAMIENTAS*/
-html, body {
+html,
+body {
   background-color: #f8f8f8 !important;
   box-sizing: border-box;
 }
@@ -51,6 +52,7 @@ html, body {
   border-radius: 6px;
   opacity: 1;
   border: none;
+  transition: 0.3s ease all;
 }
 
 .categoria-producto:focus {
@@ -73,12 +75,18 @@ html, body {
 }
 .img-miniatura {
   width: 100%;
-  border: 1px solid #0000001f;
+
   background-color: #fff;
   padding: 7%;
   border-radius: 8px;
   box-shadow: 0px 3px 5px #0000001f;
   cursor: pointer;
+  margin-bottom: 30px;
+  transition: 0.3s ease all;
+  border-bottom: 4px solid #f8f8f800;
+  border-top: 4px transparent;
+  border-left: 4px transparent;
+  border-right: 4px transparent;
 }
 .img-miniatura h5 {
   color: #888888;
@@ -87,24 +95,17 @@ html, body {
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
   padding-bottom: 5px;
+  border-bottom: 4px solid #f8f8f800;
 }
-/*
-.img-miniatura:hover {
-  transition: border-bottom ease 2s;
-  border-bottom: 3px solid #ff4438;
-}*/
+.linea {
+  margin-top: -2px;
+}
 .img-min:focus {
   border-bottom: 3px solid #ff4438;
 }
-
 .img-miniatura:focus {
   outline: none;
-  /*border: 4px solid #ff4438;*/
 }
-.b {
-  border-bottom: 3px solid #f8f8f8;
-}
-
 .tbl-producto {
   background-color: #fff;
   border: 1px solid #707070;
@@ -118,15 +119,15 @@ html, body {
   padding: 0 !important;
   margin: 0 !important;
 }
-.tbl-item p{
- font-weight: 700;
- color: #000000;
- margin: 15px  !important;
+.tbl-item p {
+  font-weight: 700;
+  color: #000000;
+  margin: 15px !important;
 }
-.tbl-item p span{
+.tbl-item p span {
   font-weight: 500;
   color: #000000;
- }
+}
 
 /*PAGINA DE PRODUCTO*/
 .catalogo-info {
@@ -167,9 +168,8 @@ html, body {
   color: #605f5f;
 }
 
-
 .modal-footer button {
-  background-color: #ff4438 ;
+  background-color: #ff4438;
   border: none;
 }
 #modal-dialog {
@@ -177,8 +177,7 @@ html, body {
   margin: 15% auto;
 }
 .img-modal {
- width: 100%;
-
+  width: 100%;
 }
 @media (max-width: 426px) {
   #modal-dialog {
@@ -219,10 +218,16 @@ html, body {
     width: 60%;
   }
   .img-miniatura {
-    padding: 5%;
+    border-bottom: 2px solid #f8f8f800;
+  border-top: 2px transparent;
+  border-left: 2px transparent;
+  border-right: 2px transparent;
+  margin-bottom: 5px;
+    padding:15px 5% 5px 5%;
   }
   .titulo {
     color: #ff4438;
+    margin-top: 15px;
   }
   .img-grande {
     width: 50%;
@@ -249,7 +254,7 @@ html, body {
   .nu-20 {
     font-family: "Nunito Sans", sans-serif;
     font-weight: 700;
-    font-size: min(4vw, 12px);
+    font-size: min(4vw, 10px);
   }
   .nu-26 {
     font-family: "Nunito Sans", sans-serif;
@@ -261,14 +266,43 @@ html, body {
     font-weight: 600;
     font-size: min(2.4vw, 40px);
   }
+  .cursor-button {
+    transition: 0.3s ease all;
+    background-color: #ff4438;
+    color: #fff;
+  }
+  .cursor-img {
+    transition: 0.3s ease all;
+    outline: none;
+    border: 2px solid #ff4438;
+  }
+
+  .cursor-shadow {
+    transition: 0.3s ease all;
+    border-bottom: 2px solid #ff4438;
+  }
+  .linea {
+    visibility: hidden;
+  }
+ 
 }
 
+@media (min-width: 427px) {
+
 .cursor-button {
+  transition: 0.3s ease all;
   background-color: #ff4438;
   color: #fff;
 }
 
 .cursor-img {
+  transition: 0.3s ease all;
   outline: none;
-    border: 4px solid #ff4438;
+  border: 4px solid #ff4438;
+}
+
+.cursor-shadow {
+  transition: 0.3s ease all;
+  border-bottom: 4px solid #ff4438;
+}
 }
